<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gtalcs"
    tools:context="hr.tvz.android.zavrsniprojekt.activities.DetailsActivity">

    <ImageView
        android:id="@+id/imgDetails"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/character_name"
        android:src="@drawable/toni"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/logoDetails"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:contentDescription="@string/character_name"
        android:rotation="340"
        android:src="@drawable/logogtalcs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />

    <TextView
        android:id="@+id/nameDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#B1000000"
        android:selectAllOnFocus="false"
        android:text="@string/character_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FB4C4C"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDetails" />

    <TextView
        android:id="@+id/gameDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#B1000000"
        android:text="@string/character_game"
        android:textAlignment="center"
        android:textColor="@color/purple_200"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameDetails" />

    <TextView
        android:id="@+id/descDetails"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#B1000000"
        android:text="@string/character_description"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameDetails"
        app:layout_constraintVertical_bias="0.005" />

</androidx.constraintlayout.widget.ConstraintLayout>